#2097:Add plugin management to tool settings UI
      Show plugins as checkable children of IDE-group tools in the tool
      configuration TreeView. Plugin active state is loaded via
      PluginBasedCommandlet#getPlugins() and persisted on Save through a new
      savePluginActive() method on PluginBasedCommandlet. Plugins are grayed out when their parent tool is disabled.